# daily_tolkien_quotes

./: .gitignore  Cargo.toml  README.md  quotes.json
src/: main.rs  send_quote.rs
