[package]
name = "tolkien_quotes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
rand = { version = "0.10.0", features= ["thread_rng"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.50.0", features = ["full"] }
dotenvy = "0.15.7"
